fix: #13576 || [Menu] Menu has weak z-index

--- a/src/app/components/megamenu/megamenu.css
+++ b/src/app/components/megamenu/megamenu.css
@@ -25,7 +25,7 @@
     display: none;
     position: absolute;
     width: auto;
-    z-index: 1;
+    z-index: 10;
 }
 
 .p-megamenu-root-list > .p-menuitem-active > .p-megamenu-panel {
